--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/portfolio.svg" />
+    <link rel="icon" type="image/svg+xml" href="/assets/icons/portfolio.svg" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
